--- a/project-manager.html
+++ b/project-manager.html
@@ -40,10 +40,26 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qKd9VfwL&k=Job&j=oNfs7fwl&__jvst=Employee&__jvsd=se8Imfwa&__jvsc=Twitter&bid=nksWmMwl'>Zensar Technologies Careers - Project Manager-Agile</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/PortonicsLimited/743999698350739-project-manager'>Portonics Limited Project Manager | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999698351212-project-manager-btoc-belgium'>JobTeaser Project Manager BtoC Belgium | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/nasuni/job/owLpbfwB'> Nasuni Careers - Principal Technical Program Manager</a></h5> 
+<p><span class="badge badge-light">Boston, Massachusetts</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://beyli.recruitee.com/l/fr/o/international-project-managerin-wmd'>
       International Project Manager/-in (w/m/d) - :beyli
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">M?nchen</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://beyli.recruitee.com/l/fr/o/digital-marketing-project-manager-wmd'>
@@ -55,7 +71,7 @@
 <h5><a href='https://beyli.recruitee.com/l/fr/o/digital-marketing-project-manager-wmd-munchen'>
       (Digital) Marketing Project Manager (w/m/d) - :beyli
     </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">M?nchen</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.theguardian.com/job/6988124/technology-project-manager-12-months-ftc/'>Technology Project Manager - 12 Months FTC job with SOUTHWARK COUNCIL | Guardian Jobs</a></h5> 
@@ -230,7 +246,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ca.indeed.com/job/assistant-project-manager-site-labour-4219c5504c8d2063'>Assistant to Project Manager-Site Labour - Niagara Falls, ON - Indeed.com</a></h5> 
+<h5><a href='https://ca.indeed.com/job/assistant-project-manager-site-labour-4219c5504c8d2063'>Assistant to Project Manager-Site Labour - Niagara Falls, ON - Indeed.com</a></h5> 
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -262,7 +278,7 @@
 <p><span class="badge badge-light">San Francisco Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://mthightech.org/job/architectural-project-manager/'>Architectural Project Manager - Montana High Tech Business Alliance</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mthightech.org/job/architectural-project-manager/'>Architectural Project Manager - Montana High Tech Business Alliance</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -274,7 +290,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698318353-project-manager'>CapTech Consulting Project Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698318353-project-manager'>CapTech Consulting Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -298,7 +314,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobware.net/Job/Scrum-Master-Project-Manager-m-f-x-Division-Customer-Management.342221935.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Scrum Master / Project Manager (m/f/x) Division Customer Management | Wirecard Technologies GmbH | Job</a></h5> 
+<h5><a href='https://jobs.jobware.net/Job/Scrum-Master-Project-Manager-m-f-x-Division-Customer-Management.342221935.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Scrum Master / Project Manager (m/f/x) Division Customer Management | Wirecard Technologies GmbH | Job</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -306,7 +322,7 @@
 <p><span class="badge badge-light">United States France Italy Thailand</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://postings.com/21758/jobs/construction-extraction/construction-project-manager-capex-coral-springs-fl-33075/83983'>
+<h5><a href='https://postings.com/21758/jobs/construction-extraction/construction-project-manager-capex-coral-springs-fl-33075/83983'>
 Construction Project Manager - CAPEX in Coral Springs, from Custom Executive Search, by John Barto
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -341,7 +357,7 @@ Manager to plan, drive and execute in-person premium multi-track events under?..
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/caminar/job/oqLqbfww'>Caminar Careers - Clinical Program Manager, Substance Use</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/caminar/job/oqLqbfww'>Caminar Careers - Clinical Program Manager, Substance Use</a></h5> 
 <p><span class="badge badge-light">San Jose, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -377,7 +393,7 @@ Manager to plan, drive and execute in-person premium multi-track events under?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=o08rbfwu&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=nrDcmMwT'>NICE Careers - Project Manager</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=o08rbfwu&__jvst=Employee+Referral&__jvsd=sHAdDgwS&__jvsc=Twitter&bid=nrDcmMwT'>NICE Careers - Project Manager</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois  Minneapolis, Minnesota  Chicago Minneapolis</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -427,7 +443,7 @@ product lines such as Adobe's Creative Cloud, Experience Cloud, and Document
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://hologic.referrals.selectminds.com/jobs/field-installation-project-manager-ga-al-ms-tn-3027'>Field Installation Project Manager - GA, AL, MS, TN - Hologic Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hologic.referrals.selectminds.com/jobs/field-installation-project-manager-ga-al-ms-tn-3027'>Field Installation Project Manager - GA, AL, MS, TN - Hologic Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -440,22 +456,6 @@ product lines such as Adobe's Creative Cloud, Experience Cloud, and Document
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://cbre.referrals.selectminds.com/CBREVO8bPB'>Sr Project Manager - CBRE Careers</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://burnsmcdonn.referrals.selectminds.com/jobs/remediation-project-manager-6789'>Remediation Project Manager - Burns & McDonnell Careers</a></h5> 
-<p><span class="badge badge-light">Los Angeles, California United States</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/liferay/job/oQ5mbfwc'>Liferay, Inc. Careers - Project Manager</a></h5> 
-<p><span class="badge badge-light">Budapest, Hungary  Los Angeles Brazil</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://dacadoo.join.com/jobs/462130-project-manager-80-100-m-f'>Job @ dacadoo (Z?rich): Project Manager 80-100% (m/f) | JOIN</a></h5> 
-<p><span class="badge badge-light">Z?rich, Switzerland  Australia</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oQzkbfwE&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nuKPlMwF'>Guidewire Software, Inc. Careers - Sr Project Manager, Professional Services - 80% Travel, Remote, US</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
